# python-intensiv-1

./: readme.md  test.txt
chatbot_projekt/chatbot/: .env  README.md  pyproject.toml
my_project/: all_and_any.py  dataclass_1.py  main.py  oop_1.py  oop_2.py  oop_3.py  products.py  pyproject.toml
my_project/utils/: __init__.py  api.py  db.py
product_finder/: pyproject.toml
product_finder/product_finder/: db.py  main.py  schema.py
pytest_tutorial/: conftest.py  test_wallet.py  wallet.py
superpro/: pyproject.toml
superpro/superpro/: __main__.py  lib.py  main.py
tag_1/: 0_variablen.py  10_for_else.py  1_numerische_datentypen.py  2_bool.py  3_strings.py  4_liste.py  5_format.py  6_dict.py  7_tuple.py  8_aufgabe.py  9_set.py  aufgaben.py
tag_2/: 0_morning_aufgabe.py  10_files.py  11_json.py  1_tuple.py  2_funktionen.py  3_funktionen.py  4_funktionsobjekt.py  5_decorators.py  6_entpacken_bei_call.py  7_lambda.py  8_sortieren.py  9_pfaden.py  aufgabe.md  data.txt  result.json
tag_2/volcano_project/: active_volcanos_Italy.json  main.py  repository.py
tag_3/: 0_generator.py  1_yield_funktion.py  aufgabe.md
tag_3/movie_catalog/: pyproject.toml
tag_4/: 0_slots.py  1_getattr_setattr.py  2_vererbung.py  3_parser.py  4_abc.py  5_protocol.py  6_enum.py  7_operator_overloading.py  8_mixins.py  9_name_mangling.py  ampel_aufgabe.py  aufgabe_enum.md
tag_5/: collections_tutorial.py  logging_tutorial.py  rotating.log.1
tag_5/aufgaben/: list_aufgabe.py
tag_5/db_tutorial/: 0_intro.py  products.db
tag_5/numpy_pandas_tutorial/: numpy_tut.py  pandas_tut.py
(+11 files in other folders)
