[project]
name = "superpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.34.2",
]


[tool.mypy]
follow_imports = "silent"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_subclassing_any = false
strict_optional = false
no_implicit_optional = false
disallow_incomplete_defs = true
disallow_untyped_defs = false
warn_no_return = false
warn_unreachable = true
exclude = ['env', '.env', '.git', 'tests', 'migrations']